<resources>
    <string name="app_name">Health Tracker</string>
    <string name="devices">Bluetooth Devices</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_choose_file">ChooseFile</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="steps_tracked">Steps:</string>
    <string name="bpm_value">BPM:</string>
    <string name="spo_value">%SpO2:</string>
    <string name="startBtn">Start Rec.</string>
    <string name="stopBtn">Stop</string>
    <string name="saveBtn">Save</string>
    <string name="resetBtn">Reset</string>
    <string name="continueBtn">Continue</string>
    <string name="choose_mode">Choose Mode</string>
    <string name="choose_gender">Choose Gender</string>
    <string name="applyButton">Apply</string>
    <string name="age">Age</string>
    <string name="enter_your_age">Enter your age</string>
    <string name="enter_your_height">Enter your height in cm</string>
    <string name="enter_your_weight">Enter your weight in kg</string>
    <string name="emergency">Enter emergency contact email</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="title_activity_home">Health Tracker App</string>
    <string name="title_activity_map">Location Tracker</string>
    <string name="title_loadCsv">Load from CSV</string>
    <string name="title_activity_personal_details">PersonalDetailsActivity</string>

    <integer name="google_play_services_version">12451000</integer>
    <string name="api_key">AIzaSyBh-G8bIDZAZo3cDYnYvDplz5m6R2qn5Ns</string>


    <string name="bigText_glass">Drink!</string>
    <string name="drink_water">NotificationDrinkWaterService</string>
    <string name="bigText_updatePiechart">updatePiechart</string>
    <string name="start_hour">start_hour</string>
    <string name="start_min">start_min</string>
    <string name="end_hour">end_hour</string>
    <string name="end_min">end_min</string>
    <string name="notification_interval">notification_interval</string>
    <string name="quantity">quantity</string>
    <string name="glass_size">glass_size</string>
    <string name="total_consumption">total_consumption</string>
    <string name="notify_turned_on">notify_turned_on</string>

    <string-array name="notification_interval_array">
        <item>1</item>
        <item>5</item>
        <item>15</item>
        <item>20</item>
        <item>30</item>
        <item>40</item>
        <item>60</item>
    </string-array>

    <string-array name="glass_size_array">
        <item>100</item>
        <item>150</item>
        <item>200</item>
        <item>300</item>
        <item>400</item>
        <item>500</item>
    </string-array>

</resources>
