<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/white"
    android:gravity="center"

    tools:context="com.example.project72471.PersonalDetails.PersonalDetailsFragment">

    <LinearLayout
        android:background="@color/white"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_border"
            android:orientation="vertical">

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:gravity="center"
                android:text="@string/gender" />

            <Spinner
                android:id="@+id/genderSpinner"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:autofillHints="name"

                android:backgroundTint="@color/colorPrimary"
                android:gravity="center"
                android:spinnerMode="dialog" />

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:gravity="center"
                android:text="@string/enter_your_age" />

            <EditText
                android:id="@+id/age"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/colorPrimary"

                android:ems="10"
                android:gravity="center"
                android:inputType="number" />

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:gravity="center"
                android:text="@string/enter_your_height" />

            <EditText
                android:id="@+id/height"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/colorPrimary"
                android:ems="10"
                android:gravity="center"
                android:inputType="number" />

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                android:ems="10"
                android:gravity="center"
                android:text="@string/enter_your_weight" />

            <EditText
                android:id="@+id/weight"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/colorPrimary"
                android:ems="10"
                android:gravity="center"
                android:inputType="number" />


            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                android:ems="10"
                android:gravity="center"
                android:text="@string/emergency"/>

            <EditText
                android:id="@+id/emergency"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/colorPrimary"
                android:ems="10"
                android:gravity="center"
                android:inputType="textEmailAddress"/>

            <Button
                android:id="@+id/applyButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@color/colorPrimary"
                android:text="@string/applyButton"
                android:textColor="@android:color/white" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>